se agrega el i18n configurando el idioma se agrega la confirmacion del usauario se agrega nueva validacion para el sign in usuarios activos se esta agregando el sns de validacion se agregan los campos del country se crea el usurio mediante un EP se agrega el EP de los paises se crea el controller para el registro de un user
